@@ -1,0 +1,19 @@
+<mission name="4 versus 4" system="solar-system.xml">
+	<variables>
+		<var name="defaultplayer" value="blue"/>
+	</variables>
+        <flightgroups>
+                <flightgroup name="green" faction="rebels" type="x-wing" ainame="superace" waves="2" nr_ships="2">
+			<pos x="1.0" y="1.0" z="1.0"/>
+			<rot x="180.0" y="180.0" z="180.0"/>
+		</flightgroup>
+                <flightgroup name="blue" faction="rebels" type="y-wing" ainame="superace" waves="2" nr_ships="2">
+			<pos offset="green" x="11.0" y="-11.0" z="1.0"/>
+			<rot x="180.0" y="180.0" z="180.0"/>
+		</flightgroup>
+                <flightgroup name="omikron" faction="empire" type="tie" ainame="superace" waves="2" nr_ships="4">
+			<pos offset="green" x="1.0" y="5.0" z="1.0"/>
+			<rot x="90.0" y="90.0" z="180.0"/>
+		</flightgroup>
+        </flightgroups>
+</mission>
