@@ -3,9 +3,16 @@
                 <bind key="t" modifier="none" command="target_enemy" />
                 <bind key="cursor_up" modifier="none" command="pitch_up"/>
                 <bind key="t" modifier="alt" command="increase_shields" arg="25"/>
+		<bind joystick="0" button="0" modifier="none" command="target_enemy" />
         </bindings>
         <colors>
-                <color name="red" r="1" g="0" b="0"/>
+                <color name="red"	r="1.0" g="0.0" b="0.0" a="1.0"/>
+                <color name="green"	r="0.0" g="1.0" b="0.0" a="1.0"/>
+                <color name="blue"	r="0.0" g="0.0" b="1.0" a="1.0"/>
+                <color name="yellow"	r="0.0" g="1.0" b="1.0" a="1.0"/>
+		<color name="enemy"	ref="red"/>
+		<color name="friend"	ref="green"/>
+		<color name="neutral"	ref="yellow"/>
         </colors>
 	<variables>
         	<section name="graphics">
